applets/digital-clock: make "Copy to Clipboard" menu less messy

This commit organizes the "Copy to Clipboard" options and removes
a lot of duplicated options when "show seconds" is enabled.

It also makes the code more readable. :)

BUG: 453111