applets/digital-clock/plugin/clipboardmenu.cpp
@@ -66,56 +66,33 @@ void ClipboardMenu::setupMenu(QAction *action)
         QString s;
         QAction *a;
 
+        // e.g 12:30 PM or 12:30:01 PM
+        s = m_secondsIncluded ? QLocale().toString(time, QLocale::LongFormat) : QLocale().toString(time, QLocale::ShortFormat);
+        a = menu->addAction(s);
+        a->setData(s);
+
+        // e.g 4/28/22
         s = QLocale().toString(date, QLocale::ShortFormat);
         a = menu->addAction(s);
         a->setData(s);
-        s = date.toString(Qt::ISODate);
-        a = menu->addAction(s);
-        a->setData(s);
+
+        // e.g Thursday, April 28, 2022
         s = QLocale().toString(date, QLocale::LongFormat);
         a = menu->addAction(s);
         a->setData(s);
 
-        menu->addSeparator();
-
-        s = QLocale().toString(time, QLocale::ShortFormat);
+        // e.g Thursday, April 28, 2022 12:30 PM or Thursday, April 28, 2022 12:30:01 PM -03
+        s = m_secondsIncluded ? QLocale().toString(date, QLocale::LongFormat) + ws + QLocale().toString(time, QLocale::LongFormat) : QLocale().toString(date, QLocale::LongFormat) + ws + QLocale().toString(time, QLocale::ShortFormat);
         a = menu->addAction(s);
         a->setData(s);
-        if (m_secondsIncluded) {
-            s = QLocale().toString(time, QLocale::LongFormat);
-            s.remove(rx);
-            a = menu->addAction(s);
-            a->setData(s);
-            s = QLocale().toString(time, QLocale::LongFormat);
-            a = menu->addAction(s);
-            a->setData(s);
-        }
 
-        menu->addSeparator();
-
-        s = QLocale().toString(time, QLocale::ShortFormat) + ws + QLocale().toString(time, QLocale::ShortFormat);
+        // e.g 2022-04-28
+        s = date.toString(Qt::ISODate);
         a = menu->addAction(s);
         a->setData(s);
-        if (m_secondsIncluded) {
-            s = QLocale().toString(time, QLocale::ShortFormat) + ws + QLocale().toString(time, QLocale::LongFormat).remove(rx);
-            a = menu->addAction(s);
-            a->setData(s);
-            s = QLocale().toString(time, QLocale::ShortFormat) + ws + QLocale().toString(time, QLocale::LongFormat);
-            a = menu->addAction(s);
-            a->setData(s);
-        }
-        s = date.toString(Qt::ISODate) + ws + QLocale().toString(time, QLocale::ShortFormat);
-        a = menu->addAction(s);
-        a->setData(s);
-        if (m_secondsIncluded) {
-            s = date.toString(Qt::ISODate) + ws + QLocale().toString(time, QLocale::LongFormat).remove(rx);
-            a = menu->addAction(s);
-            a->setData(s);
-            s = date.toString(Qt::ISODate) + ws + QLocale().toString(time, QLocale::LongFormat);
-            a = menu->addAction(s);
-            a->setData(s);
-        }
-        s = QLocale().toString(date, QLocale::LongFormat) + ws + QLocale().toString(time, QLocale::ShortFormat);
+
+        // e.g 2022-04-28 12:30 PM or 2022-04-28 12:30:01 PM -03
+        s = m_secondsIncluded ? date.toString(Qt::ISODate) + ws + QLocale().toString(time, QLocale::LongFormat) : date.toString(Qt::ISODate) + ws + QLocale().toString(time, QLocale::ShortFormat);
         a = menu->addAction(s);
         a->setData(s);
 
